Minor changes: fixed buttons and contact hrefs to look better on mobile. Major changes: added Announcements feature--display plus add, edit, delete via php/mysql

--- a/css/showMeStyles.css
+++ b/css/showMeStyles.css
@@ -72,7 +72,7 @@ textarea {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;	
-	width: 50%;
+	width: 75%;
 	height: 80px;
 }
 
